Side scrollbars fixed

--- a/src/styles/abstracts/_breakpoints.scss
+++ b/src/styles/abstracts/_breakpoints.scss
@@ -1,4 +1,5 @@
 $breakpoints: (
    tablet: 49.999em,
+   tablet-stories: 44.999em,
    desktop: 69.999em,
 );
