--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -74,7 +74,7 @@ body {
    @include e(list) {
       @include mq(min-width, tablet) {
          @include flexy($dir: row);
-         gap: 2rem;
+         gap: 1.3rem;
       }
    }
 
